[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools.git@main", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiodns"
version = "3.2.0"
description = "Simple DNS resolver for asyncio"
readme = "README.rst"
authors = [{name = "Saúl Ibarra Corretgé", email = "s@saghul.net"}]
license = {file = "LICENSE"}
keywords = ["DNS", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pycares @ git+https://github.com/Levalicious/pycares.git"
]

[project.urls]
homepage = "https://github.com/saghul/aiodns"

[tool.setuptools]
packages = ["aiodns"]
package-data = { aiodns = ["py.typed"] }